[tool.poetry]
name = "gasai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.5.2"
pandas = "^1.5.2"
web3 = "^5.31.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
